# fastapi-blank

./: .env.template  .gitignore  README.md  pyproject.toml
src/alembic/: env.py
src/backend/: __init__.py  main.py
src/backend/api/api_v1/: __init__.py  auth.py  users.py
src/backend/api/dependencies/authentication/: access_tokens.py  backend.py  strategy.py  users.py
src/backend/core/: config.py  exceptions.py  types.py
src/backend/core/authentication/: __init__.py  fastapi_users.py  strategy.py  user_manager.py
src/backend/core/models/: __init__.py  access_token.py  user.py
src/backend/core/models/mixins/: __init__.py  id_int_pk.py
src/backend/core/schemas/: __init__.py  user.py
